<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ai.gargantua</groupId>
  <artifactId>gargantua-parent</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  <name>Gargantua AI Agent Framework</name>

  <modules>
    <module>agent-core</module>
    <module>agent-memory-sdk</module>
    <module>agent-engine</module>
    <module>agent-mcp-server</module>
    <module>agent-example-fitcoach</module>
    <module>agent-shell</module>
    <module>agent-skill-linter-maven-plugin</module>
    <module>agent-archetype</module>
  </modules>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.4</version>
    <relativePath/>
  </parent>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <langchain4j.version>1.12.1</langchain4j.version>
    <springdoc.version>3.0.2</springdoc.version>
    <spring-shell.version>4.0.1</spring-shell.version>
    <resilience4j.version>2.3.0</resilience4j.version>
    <caffeine.version>3.2.0</caffeine.version>
    <json-schema-validator.version>1.5.4</json-schema-validator.version>
    <flexmark.version>0.64.8</flexmark.version>
    <testcontainers.version>1.20.4</testcontainers.version>
    <wiremock.version>3.10.0</wiremock.version>
    <mcp-sdk.version>0.9.0</mcp-sdk.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>ai.gargantua</groupId>
        <artifactId>agent-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>ai.gargantua</groupId>
        <artifactId>agent-memory-sdk</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>ai.gargantua</groupId>
        <artifactId>agent-engine</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>ai.gargantua</groupId>
        <artifactId>agent-mcp-server</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-bom</artifactId>
        <version>${langchain4j.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework.shell</groupId>
        <artifactId>spring-shell-starter</artifactId>
        <version>${spring-shell.version}</version>
      </dependency>

      <dependency>
        <groupId>io.github.resilience4j</groupId>
        <artifactId>resilience4j-bom</artifactId>
        <version>${resilience4j.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>${caffeine.version}</version>
      </dependency>
      <dependency>
        <groupId>com.networknt</groupId>
        <artifactId>json-schema-validator</artifactId>
        <version>${json-schema-validator.version}</version>
      </dependency>
      <dependency>
        <groupId>com.vladsch.flexmark</groupId>
        <artifactId>flexmark-all</artifactId>
        <version>${flexmark.version}</version>
      </dependency>

      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.wiremock</groupId>
        <artifactId>wiremock-standalone</artifactId>
        <version>${wiremock.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>io.modelcontextprotocol.sdk</groupId>
        <artifactId>mcp-bom</artifactId>
        <version>${mcp-sdk.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- ═══════════════════════════════════════════════════════════════════════
       Distribution — GitHub Packages Maven Registry
       Consumers add this repository to their pom.xml or settings.xml:
         <repository>
           <id>github</id>
           <url>https://maven.pkg.github.com/giskardb/gargantua</url>
         </repository>
       ═══════════════════════════════════════════════════════════════════════ -->
  <distributionManagement>
    <repository>
      <id>github-gargantua</id>
      <name>Gargantua GitHub Packages</name>
      <url>https://maven.pkg.github.com/giskardb/gargantua</url>
    </repository>
  </distributionManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <parameters>true</parameters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.graalvm.buildtools</groupId>
          <artifactId>native-maven-plugin</artifactId>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
